Modificando as as classes de gravitational e Friction